Created movie reviews middlewares paired with swagger API documentation
