# backend/controllers/contacts.js
@@ -1,96 +1,0 @@
-const mongodb = require("../db/connect");
-const ObjectId = require("mongodb").ObjectId;
-
-const getAll = async (req, res) => {
-  //#swagger.tags=["Contacts"]
-  const result = await mongodb.getDb().collection("contacts").find();
-  result.toArray().then((lists) => {
-    res.setHeader("Content-Type", "application/json");
-    res.status(200).json(lists);
-  });
-};
-
-const getSingle = async (req, res) => {
-  //#swagger.tags=["Contacts"]
-  const id = req.params.id;
-
-  if (!ObjectId.isValid(id)) {
-    console.log("getSingle() ran!");
-    return res.status(400).json({ message: "Invalid contact ID." });
-  }
-  const userId = new ObjectId(id);
-  const result = await mongodb
-    .getDb()
-    .collection("contacts")
-    .findOne({ _id: userId });
-  if (result) {
-    res.setHeader("Content-Type", "application/json");
-    res.status(200).json(result);
-  } else {
-    res.status(404).json({ message: "Contact not found." });
-  }
-};
-
-const createUser = async (req, res) => {
-  //#swagger.tags=["Contacts"]
-  const user = {
-    firstName: req.body.firstName,
-    lastName: req.body.lastName,
-    email: req.body.email,
-    favoriteColor: req.body.favoriteColor,
-    birthday: req.body.birthday,
-  };
-  const response = await mongodb.getDb().collection("contacts").insertOne(user);
-  if (response.acknowledged > 0) {
-    res.status(204).send();
-  } else {
-    res
-      .status(500)
-      .json(response.error || "An error occurred while creating the user");
-  }
-};
-const updateUser = async (req, res) => {
-  //#swagger.tags=["Contacts"]
-  const userId = new ObjectId(req.params.id);
-  const user = {
-    firstName: req.body.firstName,
-    lastName: req.body.lastName,
-    email: req.body.email,
-    favoriteColor: req.body.favoriteColor,
-    birthday: req.body.birthday,
-  };
-  const response = await mongodb
-    .getDb()
-    .collection("contacts")
-    .replaceOne({ _id: userId }, user);
-  if (response.modifiedCount > 0) {
-    res.status(204).send();
-  } else {
-    res
-      .status(500)
-      .json(response.error || "An error occurred while updating the user");
-  }
-};
-
-const deleteUser = async (req, res) => {
-  //#swagger.tags=["Contacts"]
-  const userId = new ObjectId(req.params.id);
-
-  const id = req.params.id;
-  if (!ObjectId.isValid(id)) {
-    return res.status(400).json({ message: "Invalid ID format" });
-  }
-
-  const response = await mongodb
-    .getDb()
-    .collection("contacts")
-    .deleteOne({ _id: userId });
-  if (response.deletedCount > 0) {
-    res.status(204).send();
-  } else {
-    res
-      .status(500)
-      .json(response.error || "An error occurred while deleting the user");
-  }
-};
-module.exports = { getAll, getSingle, createUser, updateUser, deleteUser };
