# backend/routes/movies.js
@@ -1,0 +1,16 @@
+const xpress = require("express");
+const router = xpress.Router();
+
+const contactsController = require("../controllers/movies");
+
+router.get("/", contactsController.getAllMovies);
+
+router.get("/:id", contactsController.getSingleMovie);
+
+router.post("/", contactsController.createMovie);
+
+router.put("/:id", contactsController.updateMovie);
+
+router.delete("/:id", contactsController.deleteMovie);
+
+module.exports = router;
